Fixed alignment issue with upper nav

--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@ nav {
     justify-content: space-between;
 }
 
+nav .nav-section {
+    align-self: center;
+}
+
 a:link, a:visited {
     color: black;
     text-decoration: none;
